--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+label {
+  font-size: 14px;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
